Urls and redirects small changes

--- a/resources/views/templates/items.html
+++ b/resources/views/templates/items.html
@@ -2,6 +2,8 @@
     <div class="col-lg-12 margin-tb">
         <div class="pull-left">
             <h1>Links Management</h1>
+            <p>Here you can add, edit or delete links.</p> 
+            <p>The shortened links can be copied from the list.</p>
         </div>
         <div class="pull-right" style="padding-top:30px">
             <div class="box-tools" style="display:inline-table">
@@ -49,7 +51,6 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-xs-12 col-sm-6 col-md-6">
-                            <strong>URL : </strong>
                             <div class="form-group">
                                 <input ng-model="form.long_url" type="text" placeholder="URL" name="long_url" class="edit_url form-control" required />
                                 <div class='help-block'></div> 
@@ -80,7 +81,6 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-xs-12 col-sm-6 col-md-6">
-                            <strong>URL : </strong>
                             <div class="form-group">
                                <input ng-model="form.long_url" type="text" placeholder="URL" name="long_url" class="edit_url form-control" required />
                                <div class='help-block'></div> 
